k8s/strategies/shadow/primary-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aceest-fitness-primary
  namespace: aceest
spec:
  replicas: 2
  selector:
    matchLabels:
      app: aceest-fitness
      release: primary
  template:
    metadata:
      labels:
        app: aceest-fitness
        release: primary
    spec:
      containers:
        - name: aceest-fitness
          image: IMAGE_PLACEHOLDER
          ports:
            - containerPort: 5000
