k8s/strategies/shadow/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aceest-fitness-service
  namespace: aceest
spec:
  type: NodePort
  selector:
    app: aceest-fitness
    release: primary
  ports:
    - port: 80
      targetPort: 5000
      nodePort: 30080
