k8s/strategies/shadow/shadow-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aceest-fitness-shadow-service
  namespace: aceest
spec:
  selector:
    app: aceest-fitness
    release: shadow
  ports:
    - port: 80
      targetPort: 5000
