k8s/strategies/shadow/mirror-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aceest-shadow-ingress
  namespace: aceest
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/mirror-target: http://aceest-fitness-shadow-service$request_uri
spec:
  ingressClassName: nginx
  rules:
    - host: aceest.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aceest-fitness-service
                port:
                  number: 80
